<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_example</name>
  <version>0.20.4</version>
  <description>Example project of ros-evalaute.</description>

  <maintainer email="FAIZ030612@163.com">Jeffrey Sharp</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp_components</depend>
  <build_depend>std_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
